DuPont DevSB/src/objects/ccrz__E_Menu__c.object
<CustomObject>
    <description>The E_Menu__c object contains the header data of the Menu Link. Please Note: Unless Menu Cache is re-generated, any changes made to the data in this object will not reflect on the UI.</description>
    <fields>
        <fullName>ccrz__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a CC Category object, if Link Type is set to Category.</description>
        <label>Category</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>CC Category Menu Items</relationshipLabel>
        <relationshipName>CC_Category_Menu_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__DisplayName__c</fullName>
        <description>Display Name of the Menu.</description>
        <label>DisplayName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag determining whether or not this Menu record is active.</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The last date that this Menu will be available.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__LinkType__c</fullName>
        <description>Type of this Menu link. Possible values are Category, Product or URL. Option selected for this field, determines which field- Category, Product or URL should be referenced to construct the URL for this Menu link.</description>
        <label>Link Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__LocationType__c</fullName>
        <description>Deprecated.</description>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Header</fullName>
                </value>
                <value>
                    <fullName>Footer</fullName>
                </value>
                <value>
                    <fullName>Left Nav</fullName>
                </value>
                <value>
                    <fullName>Right Nav</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__MenuId__c</fullName>
        <description>Menu External ID field used for data loading.</description>
        <externalId>true</externalId>
        <label>MenuId</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__NewWindowProperty__c</fullName>
        <description>Deprecated. Was used for passing extra parameters to the URL, if Link Type was URL.</description>
        <label>New Window Property</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__NewWindow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to determine to open this Menu link in a new window or not.</description>
        <label>New Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__PageLocation__c</fullName>
        <description>Deprecated.</description>
        <label>Page Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Landing Page</fullName>
                </value>
                <value>
                    <fullName>Product Detail</fullName>
                </value>
                <value>
                    <fullName>Shopping Cart</fullName>
                </value>
                <value>
                    <fullName>Order Review</fullName>
                </value>
                <value>
                    <fullName>Order Confirmation</fullName>
                </value>
                <value>
                    <fullName>Product List Page</fullName>
                </value>
                <value>
                    <fullName>Category Landing Page</fullName>
                </value>
                <value>
                    <fullName>All Pages</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a CC Product object, if Link Type is set to Product.</description>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Product Menu Items</relationshipLabel>
        <relationshipName>CC_Product_Menu_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <defaultValue>500</defaultValue>
        <description>Sequence in which the Menu links should be displayed. Menu Record with the smallest sequence is displayed first, starting from the left in desktop view, and starting from the top in tablet/mobile view.</description>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The first date that this menu will be available.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__StoreID__c</fullName>
        <defaultValue>&quot;DefaultStore&quot;</defaultValue>
        <description>Storefront Name, for eg. DefaultStore. This field holds ONLY one Storefront Name.</description>
        <label>Store ID</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__URL__c</fullName>
        <description>This field is referenced to construct the URL of this Menu Link, if Link Type is set to URL. It can be a relative or an absolute URL.</description>
        <label>URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CC Menu</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__DisplayName__c</columns>
        <columns>ccrz__Product__c</columns>
        <columns>ccrz__Category__c</columns>
        <columns>ccrz__URL__c</columns>
        <columns>ccrz__Sequence__c</columns>
        <columns>ccrz__StoreID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ccrz__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>CC Menu Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Menu</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>